# self-mngmt-intelligent

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/application/: usecase.rs
backend/src/domain/: command.rs
backend/src/handlers/: mod.rs  telegram_handler.rs
backend/src/services/: bot_services.rs  mod.rs
