[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
teloxide = "0.17.0"
teloxide-macros = "0.10.0"
anyhow = "1.0.100"
axum = "0.8.6"
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"